Differentiate removal from defining model vs reference
Closes #156

--- a/src/components/group/group.html
+++ b/src/components/group/group.html
@@ -1,4 +1,4 @@
-<div ng-hide="ctrl.loading">
+<div ng-hide="ctrl.loading" ng-if="ctrl.group">
 
   <div class="main-header">
     <h2>{{ctrl.group | translateLabel}}</h2>
