--- a/src/components/editor/classView.html
+++ b/src/components/editor/classView.html
@@ -1,4 +1,4 @@
-<form name="form">
+<form name="form" ng-if="ctrl.class && ctrl.model">
   <div ng-if="ctrl.class && ctrl.model">
     <selection-view editable-controller="ctrl">
       <selection-buttons>
