--- a/src/components/editor/predicateView.html
+++ b/src/components/editor/predicateView.html
@@ -1,5 +1,5 @@
-<form name="form">
-  <div ng-if="ctrl.predicate && ctrl.model">
+<form name="form" ng-if="ctrl.predicate && ctrl.model">
+  <div>
     <selection-view editable-controller="ctrl">
       <selection-buttons>
         <button type="button" class="btn btn-default right" ng-click="ctrl.addProperty()" ng-show="ctrl.canModify()" translate>Add property</button>
