--- a/src/components/editor/classForm.html
+++ b/src/components/editor/classForm.html
@@ -1,4 +1,4 @@
-<editable title="Label">
+<editable title="Class label">
   <input name="Label" class="form-control" type="text" localized-input ng-model="ctrl.class.label"/>
 </editable>
 
