--- a/src/components/editor/predicateForm.html
+++ b/src/components/editor/predicateForm.html
@@ -1,4 +1,4 @@
-<editable title="Label">
+<editable title="{{ctrl.labelName}}">
   <input name="Label" class="form-control" type="text" localized-input ng-model="ctrl.predicate.label" />
 </editable>
 
