--- a/src/components/group/group.html
+++ b/src/components/group/group.html
@@ -13,7 +13,7 @@
       </editable-entity-buttons>
 
       <div class="col-md-6">
-        <editable title="Label"><input name="Label" class="form-control" type="text" localized-input ng-model="ctrl.editableInEdit.label" /></editable>
+        <editable title="Group label"><input name="Label" class="form-control" type="text" localized-input ng-model="ctrl.editableInEdit.label" /></editable>
         <editable title="Comment"><textarea name="Comment" class="form-control" localized-input ng-model="ctrl.editableInEdit.comment"></textarea></editable>
       </div>
 
