--- a/src/components/model/modelView.html
+++ b/src/components/model/modelView.html
@@ -12,7 +12,7 @@
       </editable-entity-buttons>
 
       <div class="col-md-6">
-        <editable title="Label"><input name="Label" class="form-control" type="text" localized-input ng-model="ctrl.editableInEdit.label" /></editable>
+        <editable title="Model label"><input name="Label" class="form-control" type="text" localized-input ng-model="ctrl.editableInEdit.label" /></editable>
         <non-editable title="Id" value="ctrl.editableInEdit.id"></non-editable>
         <editable title="Comment"><textarea name="Comment" class="form-control" localized-input ng-model="ctrl.editableInEdit.comment"></textarea></editable>
         <editable title="State" value-as-localization-key="true"><state-select state="ctrl.editableInEdit.state" model="ctrl.model" ng-if="ctrl.model"></state-select></editable>
