--- a/src/components/editor/classForm.html
+++ b/src/components/editor/classForm.html
@@ -3,7 +3,7 @@
 </editable>
 
 <editable title="Id">
-  <input name="Id" class="form-control" type="text" id-input ng-model="ctrl.class.curie" />
+  <input name="Id" class="form-control" type="text" id-input ng-model="ctrl.class.curie" ng-disabled="!ctrl.inUnstableState" />
 </editable>
 
 <editable title="Comment">
@@ -20,7 +20,7 @@
   <state-select state="ctrl.class.state" model="ctrl.model"></state-select>
 </editable>
 
-<editable-subject-select references="ctrl.model.references" type="ctrl.class" subject="ctrl.class.subject"></editable-subject-select>
+<editable-subject-select references="ctrl.model.references" type="ctrl.class" subject="ctrl.class.subject" disable="!ctrl.inUnstableState"></editable-subject-select>
 
 <uib-accordion close-others="true">
   <uib-accordion-group ng-repeat="property in ctrl.class.properties" is-open="ctrl.propertyViews[property.id].isOpen">
