--- a/src/components/editor/editableSubjectSelect.html
+++ b/src/components/editor/editableSubjectSelect.html
@@ -1,5 +1,5 @@
 <div class="editable-wrap">
-  <div ng-show="ctrl.subject || formController.editing">
+  <div ng-show="ctrl.subject || ctrl.isEditing()">
     <div class="model-view__title" translate>Subject</div>
     <div ng-hide="ctrl.subject" translate>Not defined</div>
     <div class="model-view__sub">
@@ -8,7 +8,7 @@
       <non-editable title="Comment" value="ctrl.subject.comment"></non-editable>
     </div>
     <div ng-class="{'model-view__sub': ctrl.subject}">
-      <button ng-show="formController.editing" type="button" class="btn btn-default btn-sm" ng-click="ctrl.selectSubject()" translate>Choose subject</button>
+      <button ng-show="ctrl.isEditing()" type="button" class="btn btn-default btn-sm" ng-click="ctrl.selectSubject()" ng-disabled="ctrl.disable" translate>Choose subject</button>
     </div>
   </div>
 </div>
