--- a/src/components/editor/predicateForm.html
+++ b/src/components/editor/predicateForm.html
@@ -3,7 +3,7 @@
 </editable>
 
 <editable title="Id">
-  <input name="Id" class="form-control" type="text" id-input ng-model="ctrl.predicate.curie" />
+  <input name="Id" class="form-control" type="text" id-input ng-model="ctrl.predicate.curie" ng-disabled="!ctrl.inUnstableState" />
 </editable>
 
 <editable title="Comment">
@@ -28,4 +28,4 @@
   <state-select state="ctrl.predicate.state" model="ctrl.model"></state-select>
 </editable>
 
-<editable-subject-select references="ctrl.model.references" type="predicate" subject="ctrl.predicate.subject"></editable-subject-select>
+<editable-subject-select references="ctrl.model.references" type="predicate" subject="ctrl.predicate.subject" disable="!ctrl.inUnstableState"></editable-subject-select>
