--- a/src/components/form/modelLanguageChooser.html
+++ b/src/components/form/modelLanguageChooser.html
@@ -1,9 +1,9 @@
 <p class="left button-label text"></p>
 <div class="btn-group left" uib-dropdown is-open="status.isOpen">
   <button id="single-button" type="button" class="btn btn-default" uib-dropdown-toggle ng-disabled="disabled">
-    {{'data ' + ctrl.currentLanguage | translate}} <span class="caret"></span>
+    {{'data ' + ctrl.language | translate}} <span class="caret"></span>
   </button>
   <ul class="dropdown-menu" role="menu">
-    <li role="menuitem" ng-repeat="language in ctrl.languages"><a ng-click="ctrl.setLanguage(language)">{{language | translate}}</a></li>
+    <li role="menuitem" ng-repeat="language in ctrl.languages"><a ng-click="ctrl.language = language">{{language | translate}}</a></li>
   </ul>
 </div>
