--- a/src/components/navigation/globalLanguageChooser.html
+++ b/src/components/navigation/globalLanguageChooser.html
@@ -1,8 +1,8 @@
 <div class="btn-group" uib-dropdown is-open="status.isopen">
   <button id="single-button" type="button" class="btn btn-default navbar-button" uib-dropdown-toggle ng-disabled="disabled">
-    {{ctrl.currentLanguage | translate}} <span class="caret"></span>
+    {{ctrl.language | translate}} <span class="caret"></span>
   </button>
   <ul class="dropdown-menu" role="menu">
-    <li role="menuitem" ng-repeat="language in ctrl.languages"><a ng-click="ctrl.setLanguage(language)">{{language | translate}}</a></li>
+    <li role="menuitem" ng-repeat="language in ctrl.languages"><a ng-click="ctrl.language = language">{{language | translate}}</a></li>
   </ul>
 </div>
