--- a/src/components/editor/classView.html
+++ b/src/components/editor/classView.html
@@ -6,7 +6,7 @@
       </selection-buttons>
 
       <selection-content>
-        <class-form class="ctrl.editableInEdit" model="ctrl.model"></class-form>
+        <class-form class="ctrl.editableInEdit" old-class="ctrl.class" model="ctrl.model"></class-form>
       </selection-content>
 
       <selection-visualization>
