--- a/src/components/editor/predicateView.html
+++ b/src/components/editor/predicateView.html
@@ -6,7 +6,7 @@
       </selection-buttons>
 
       <selection-content>
-        <predicate-form predicate="ctrl.editableInEdit" model="ctrl.model"></predicate-form>
+        <predicate-form predicate="ctrl.editableInEdit" old-predicate="ctrl.predicate" model="ctrl.model"></predicate-form>
       </selection-content>
 
       <selection-visualization>
