--- a/src/components/editor/classForm.html
+++ b/src/components/editor/classForm.html
@@ -1,9 +1,9 @@
 <editable title="Class label">
-  <input name="Label" class="form-control" type="text" localized-input ng-model="ctrl.class.label"/>
+  <input name="Label" class="form-control" type="text" localized-input="required" ng-model="ctrl.class.label"/>
 </editable>
 
 <editable title="Id">
-  <input name="Id" class="form-control" type="text" id-input ng-model="ctrl.class.curie" ng-disabled="!ctrl.inUnstableState" />
+  <input name="Id" class="form-control" type="text" required id-input old="ctrl.oldClass" ng-model="ctrl.class.curie" ng-disabled="!ctrl.inUnstableState" />
 </editable>
 
 <editable title="Comment">
