--- a/src/components/editor/predicateForm.html
+++ b/src/components/editor/predicateForm.html
@@ -1,9 +1,9 @@
 <editable title="{{ctrl.labelName}}">
-  <input name="Label" class="form-control" type="text" localized-input ng-model="ctrl.predicate.label" />
+  <input name="Label" class="form-control" type="text" localized-input="required" ng-model="ctrl.predicate.label" />
 </editable>
 
 <editable title="Id">
-  <input name="Id" class="form-control" type="text" id-input ng-model="ctrl.predicate.curie" ng-disabled="!ctrl.inUnstableState" />
+  <input name="Id" class="form-control" type="text" required id-input old="ctrl.oldPredicate" ng-model="ctrl.predicate.curie" ng-disabled="!ctrl.inUnstableState" />
 </editable>
 
 <editable title="Comment">
