--- a/src/components/form/editableEntityButtons.html
+++ b/src/components/form/editableEntityButtons.html
@@ -3,6 +3,7 @@
   <button type="button" class="btn btn-default right" ng-click="ctrl.cancelEditing()" ng-show="ctrl.isEditing()" translate>Cancel edit</button>
   <button type="button" class="btn btn-default right" ng-click="ctrl.saveEdited()" ng-show="ctrl.isEditing()" ng-disabled="form.$invalid || form.$pending" translate>Save changes</button>
   <button type="button" class="btn btn-default right" ng-click="ctrl.edit()" ng-show="ctrl.canEdit()" translate>Edit</button>
+  <a class="btn btn-default right" ng-show="ctrl.canAskForRights()" ng-href="{{ctrl.getGroup().homepage}}" target="_blank" translate>Ask for group rights</a>
   <button type="button" class="btn btn-default right" ng-click="ctrl.removeEdited()" ng-show="ctrl.canRemove()">{{ctrl.getRemoveText() | translate}}</button>
 
   <ng-transclude></ng-transclude>
