--- a/src/components/editor/selectionView.html
+++ b/src/components/editor/selectionView.html
@@ -10,7 +10,7 @@
       </editable-entity-buttons>
     </div>
 
-    <div class="selection-form" window-height="min" padding="134">
+    <div class="selection-form">
       <div ng-transclude="content"></div>
     </div>
   </div>
@@ -21,7 +21,7 @@
     <div class="component-header">
       <h3 translate>Visualization</h3>
     </div>
-    <div window-height="no-scroll" padding="85" class="visualization-container">
+    <div class="visualization-container">
       <div ng-transclude="visualization"></div>
     </div>
   </div>
