--- a/src/components/model/model.html
+++ b/src/components/model/model.html
@@ -12,7 +12,7 @@
 
           <button ng-show="ctrl.canEdit()" type="button" class="btn btn-default btn-md add-new-button" ng-click="tab.addNew()">{{tab.addLabel | translate}}</button>
 
-          <ul class="panel__list" window-height padding="95" logged-in-padding="146">
+          <ul class="panel__list" ng-class="{'has-button': ctrl.canEdit()}">
             <li ng-repeat="item in tab.items() | orderByLabel"
                 ng-class="{'model-panel__selection': ctrl.isSelected(item)}"
                 ng-click="ctrl.select(item)">
@@ -23,7 +23,7 @@
       </uib-tabset>
     </div>
 
-    <div class="model-panel--right" window-height="min">
+    <div class="model-panel--right">
       <class-view ng-if="ctrl.selection.isClass()" class="ctrl.selection" model="ctrl.model"></class-view>
       <predicate-view ng-if="ctrl.selection.isPredicate()" predicate="ctrl.selection" model="ctrl.model"></predicate-view>
     </div>
