Attempt to fix problem where selection list some times floats instantly

--- a/src/app.scss
+++ b/src/app.scss
@@ -46,6 +46,7 @@ ul.errors {
   width: $selectionListWidth;
   float: left;
   border-right: solid 1px #ddd;
+  background-color: #fff;
 
   .tab-pane {
     border-bottom: solid 1px #ddd;
