--- a/src/app.scss
+++ b/src/app.scss
@@ -117,7 +117,7 @@ ul.errors {
   min-height: 100vh;
   padding: 10px 0;
 
-  .col-md-7, .col-md-5 {
+  .col-md-7, .col-md-5, .col-md-12 {
     padding: 0 0 0 10px;
   }
 }
