--- a/src/components/editor/predicateView.html
+++ b/src/components/editor/predicateView.html
@@ -1,6 +1,6 @@
 <form name="form">
   <div ng-if="ctrl.predicate && ctrl.model">
-    <selection-view editable-controller="ctrl">
+    <selection-view editable-controller="ctrl" hide-visualization="true">
       <selection-buttons>
         <button type="button" class="btn btn-default right" ng-click="ctrl.addProperty()" ng-show="ctrl.canModify()" translate>Add property</button>
       </selection-buttons>
@@ -8,10 +8,6 @@
       <selection-content>
         <predicate-form predicate="ctrl.editableInEdit" old-predicate="ctrl.predicate" model="ctrl.model"></predicate-form>
       </selection-content>
-
-      <selection-visualization>
-        <predicate-visualization data="visualizationData"></predicate-visualization>
-      </selection-visualization>
     </selection-view>
   </div>
 </form>
