--- a/src/components/editor/predicateForm.html
+++ b/src/components/editor/predicateForm.html
@@ -28,4 +28,4 @@
   <state-select state="ctrl.predicate.state" model="ctrl.model"></state-select>
 </editable>
 
-<editable-subject-select references="ctrl.model.references" type="predicate" subject="ctrl.predicate.subject" disable="!ctrl.inUnstableState"></editable-subject-select>
+<editable-subject-select references="ctrl.model.references" type="{{ctrl.predicate.type}}" subject="ctrl.predicate.subject" disable="!ctrl.inUnstableState"></editable-subject-select>
