--- a/src/components/form/errorMessages.html
+++ b/src/components/form/errorMessages.html
@@ -1,4 +1,5 @@
 <ul ng-messages="error" ng-messages-multiple class="errors">
+  <li ng-message="invalidNamespace">{{'Invalid namespace error' | translate}}</li>
   <li ng-message="invalidCurie">{{'Invalid curie error' | translate}}</li>
   <li ng-message="idAlreadyInUse">{{'Existing id error' | translate}}</li>
   <li ng-message="required">{{'Required error' | translate}}</li>
