--- a/src/components/model/addRequireModal.html
+++ b/src/components/model/addRequireModal.html
@@ -11,7 +11,7 @@
 
       <label for="namespace" translate>Preferred namespace</label>
       <div class="input-group input-group-md">
-        <input id="namespace" class="form-control" required ng-model="ctrl.namespace" />
+        <input id="namespace" class="form-control" required namespace-input ng-model="ctrl.namespace" />
       </div>
 
       <label for="prefix" translate>Preferred prefix</label>
