--- a/src/components/editor/selectionView.html
+++ b/src/components/editor/selectionView.html
@@ -1,4 +1,4 @@
-<div ng-class="{'col-md-7': !ctrl.hideVisualization, 'col-md-12': ctrl.hideVisualization}">
+<div ng-class="{'col-md-7': !ctrl.hideVisualization, 'col-md-11': ctrl.collapsed, 'col-md-12': !ctrl.collapsed && ctrl.hideVisualization}">
   <div class="component">
     <div class="component-header">
       <h3><span ng-class="ctrl.editableController.getEditable().glyphIconClass"></span> <span>{{ctrl.editableController.getEditable() | translateLabel}}</span></h3>
@@ -16,13 +16,16 @@
   </div>
 </div>
 
-<div ng-if="!ctrl.hideVisualization" class="col-md-5">
+<div ng-if="!ctrl.hideVisualization" ng-class="{'col-md-5': !ctrl.collapsed, 'col-md-1': ctrl.collapsed}">
   <div class="component" float top-offset="8">
     <div class="component-header">
-      <h3 ng-click="ctrl.collapseVisualization()"><span translate>Visualization</span> <span class="glyphicon glyphicon-fast-forward pull-right" style="vertical-align: text-bottom"></span></h3>
+      <h3 ng-click="ctrl.collapseVisualization()" ng-hide="ctrl.collapsed"><span translate>Visualization</span> <span class="glyphicon glyphicon-chevron-right pull-right"></span></h3>
+      <h3 ng-click="ctrl.collapseVisualization()" ng-hide="!ctrl.collapsed"><span class="glyphicon glyphicon-chevron-left"></span></h3>
     </div>
-    <div class="visualization-container">
+    <div class="visualization-container" ng-hide="ctrl.collapsed">
       <div ng-transclude="visualization"></div>
     </div>
   </div>
 </div>
+
+
