--- a/src/components/editor/searchClassModal.html
+++ b/src/components/editor/searchClassModal.html
@@ -39,7 +39,7 @@
       </div>
 
       <div class="col-md-4 search-selection">
-        <form>
+        <form class="editable-form">
           <class-form ng-if="ctrl.selectedClass" class="ctrl.selectedClass" model="ctrl.model"></class-form>
         </form>
       </div>
