--- a/src/components/editor/searchPredicateModal.html
+++ b/src/components/editor/searchPredicateModal.html
@@ -1,4 +1,4 @@
-<form name="form">
+<form name="form" class="editable-form">
   <modal-template>
     <modal-title translate>Search predicates</modal-title>
 
