--- a/src/components/editor/classForm.html
+++ b/src/components/editor/classForm.html
@@ -1,23 +1,23 @@
 <editable title="Class label">
-  <input name="Label" class="form-control" type="text" localized-input="required" ng-model="ctrl.class.label"/>
+  <input id="classLabel" class="form-control" type="text" localized-input="required" ng-model="ctrl.class.label"/>
 </editable>
 
 <editable title="Id">
-  <input name="Id" class="form-control" type="text" required id-input old="ctrl.oldClass" ng-model="ctrl.class.curie" ng-disabled="!ctrl.inUnstableState" />
+  <input id="classId" class="form-control" type="text" required id-input old="ctrl.oldClass" ng-model="ctrl.class.curie" ng-disabled="!ctrl.inUnstableState" />
 </editable>
 
 <editable title="Comment">
-  <textarea name="Comment" class="form-control" localized-input ng-model="ctrl.class.comment"></textarea>
+  <textarea id="classComment" class="form-control" localized-input ng-model="ctrl.class.comment"></textarea>
 </editable>
 
-<editable title="Superclass" name="Superclass" link="ctrl.linkToSubclass()">
-  <class-select name="Superclass" curie="ctrl.class.subClassOf" model="ctrl.model"></class-select>
+<editable title="Superclass" link="ctrl.linkToSubclass()">
+  <class-select id="superClass" curie="ctrl.class.subClassOf" model="ctrl.model"></class-select>
 </editable>
 
 <non-editable title="Is defined by" value="ctrl.class.modelId" link="ctrl.class.iowUrl()"></non-editable>
 
 <editable title="State" value-as-localization-key="true" ng-if="!ctrl.class.unsaved">
-  <state-select state="ctrl.class.state" model="ctrl.model"></state-select>
+  <state-select id="classState" state="ctrl.class.state" model="ctrl.model"></state-select>
 </editable>
 
 <editable-subject-select references="ctrl.model.references" type="class" subject="ctrl.class.subject" disable="!ctrl.inUnstableState"></editable-subject-select>
