--- a/src/components/editor/predicateForm.html
+++ b/src/components/editor/predicateForm.html
@@ -1,31 +1,31 @@
 <editable title="{{ctrl.labelName}}">
-  <input name="Label" class="form-control" type="text" localized-input="required" ng-model="ctrl.predicate.label" />
+  <input id="predicateName" class="form-control" type="text" localized-input="required" ng-model="ctrl.predicate.label" />
 </editable>
 
 <editable title="Id">
-  <input name="Id" class="form-control" type="text" required id-input old="ctrl.oldPredicate" ng-model="ctrl.predicate.curie" ng-disabled="!ctrl.inUnstableState" />
+  <input id="predicateId" class="form-control" type="text" required id-input old="ctrl.oldPredicate" ng-model="ctrl.predicate.curie" ng-disabled="!ctrl.inUnstableState" />
 </editable>
 
 <editable title="Comment">
-  <textarea name="Comment" class="form-control" localized-input ng-model="ctrl.predicate.comment"></textarea>
+  <textarea id="predicateComment" class="form-control" localized-input ng-model="ctrl.predicate.comment"></textarea>
 </editable>
 
-<editable title="{{'Super' + ctrl.predicate.type}}" link="ctrl.linkToSubProperty()" name="Superproperty">
-  <predicate-select name="Superproperty" type="ctrl.predicate.type" curie="ctrl.predicate.subPropertyOf" model="ctrl.model"></predicate-select>
+<editable title="{{'Super' + ctrl.predicate.type}}" link="ctrl.linkToSubProperty()">
+  <predicate-select id="superPredicate" type="ctrl.predicate.type" curie="ctrl.predicate.subPropertyOf" model="ctrl.model"></predicate-select>
 </editable>
 
 <editable ng-if="ctrl.predicate.isAttribute()" title="Range" name="Range">
-  <range-select range="ctrl.predicate.dataType"></range-select>
+  <range-select id="predicateRange" range="ctrl.predicate.dataType"></range-select>
 </editable>
 
 <editable ng-if="ctrl.predicate.isAssociation()" title="Value class" name="Value class" link="ctrl.linkToValueClass()">
-  <class-select name="Value class" curie="ctrl.predicate.valueClass" model="ctrl.model"></class-select>
+  <class-select id="predicateValueClass" curie="ctrl.predicate.valueClass" model="ctrl.model"></class-select>
 </editable>
 
 <non-editable title="Is defined by" value="ctrl.predicate.modelId" link="ctrl.predicate.iowUrl()"></non-editable>
 
 <editable title="State" value-as-localization-key="true" ng-if="!ctrl.predicate.unsaved">
-  <state-select state="ctrl.predicate.state" model="ctrl.model"></state-select>
+  <state-select id="predicateState" state="ctrl.predicate.state" model="ctrl.model"></state-select>
 </editable>
 
 <editable-subject-select references="ctrl.model.references" type="{{ctrl.predicate.type}}" subject="ctrl.predicate.subject" disable="!ctrl.inUnstableState"></editable-subject-select>
