--- a/src/components/editor/predicateView.html
+++ b/src/components/editor/predicateView.html
@@ -1,4 +1,4 @@
-<form name="form">
+<form name="form" class="editable-form">
   <div ng-if="ctrl.predicate && ctrl.model">
     <selection-view editable-controller="ctrl" hide-visualization="true">
       <selection-buttons>
