--- a/src/components/model/modelView.html
+++ b/src/components/model/modelView.html
@@ -3,7 +3,7 @@
     <h2 accordion-chevron is-open="ctrl.visible" no-pull="true">{{ctrl.model | translateLabel}}</h2>
   </div>
 
-  <form name="form">
+  <form name="form" class="editable-form">
     <div ng-if="ctrl.model" uib-collapse="!ctrl.visible" class="main-editable-content">
 
       <editable-entity-buttons editable-controller="ctrl">
@@ -13,17 +13,17 @@
 
       <div class="col-md-6">
         <editable title="Model label">
-          <input name="Label" class="form-control" type="text" localized-input="required" ng-model="ctrl.editableInEdit.label" />
+          <input id="modelLabel" class="form-control" type="text" localized-input="required" ng-model="ctrl.editableInEdit.label" />
         </editable>
 
         <non-editable title="Id" value="ctrl.editableInEdit.id"></non-editable>
 
         <editable title="Comment">
-          <textarea name="Comment" class="form-control" localized-input ng-model="ctrl.editableInEdit.comment"></textarea>
+          <textarea id="modelComment" class="form-control" localized-input ng-model="ctrl.editableInEdit.comment"></textarea>
         </editable>
 
         <editable title="State" value-as-localization-key="true" ng-if="!ctrl.model.unsaved">
-          <state-select state="ctrl.editableInEdit.state" model="ctrl.model" ng-if="ctrl.model"></state-select>
+          <state-select id="modelState" state="ctrl.editableInEdit.state" model="ctrl.model" ng-if="ctrl.model"></state-select>
         </editable>
       </div>
 
