--- a/src/components/model/requiresView.html
+++ b/src/components/model/requiresView.html
@@ -5,9 +5,21 @@
     <uib-accordion-heading>
       <span accordion-chevron is-open="ctrl.opened[$index]">{{require | translateLabel}}</span>
     </uib-accordion-heading>
-    <button ng-show="modelViewController.canModify()" type="button" class="btn btn-default pull-right" ng-click="modelViewController.removeRequire(require)" translate>Delete require</button>
-    <editable title="Label"><input type="text" class="form-control" localized-input="required" ng-model="require.label" /></editable>
-    <editable title="Preferred namespace"><input type="text" class="form-control" required namespace-input ng-model="require.namespace" /></editable>
-    <editable title="Preferred prefix"><input type="text" class="form-control" required ng-model="require.prefix" /></editable>
+
+    <button ng-show="modelViewController.canModify()"
+            ng-disabled="modelViewController.isRequireInUse(require)" type="button" class="btn btn-default pull-right"
+            ng-click="modelViewController.removeRequire(require)" translate>Delete require</button>
+
+    <editable title="Label">
+      <input type="text" class="form-control" localized-input="required" ng-model="require.label" />
+    </editable>
+
+    <editable title="Preferred namespace">
+      <input type="text" class="form-control" ng-disabled="modelViewController.isRequireInUse(require)" required namespace-input ng-model="require.namespace" />
+    </editable>
+
+    <editable title="Preferred prefix">
+      <input type="text" class="form-control" required ng-model="require.prefix" />
+    </editable>
   </uib-accordion-group>
 </uib-accordion>
