Change deprecated model-view__title div to label

--- a/src/components/editor/editableSubjectSelect.html
+++ b/src/components/editor/editableSubjectSelect.html
@@ -1,6 +1,6 @@
 <div class="editable-wrap">
   <div ng-show="ctrl.subject || ctrl.isEditing()">
-    <div class="model-view__title" translate>Subject</div>
+    <label translate>Subject</label>
     <div ng-hide="ctrl.subject" translate>Not defined</div>
     <div class="model-view__sub">
       <non-editable title="Id" value="ctrl.subject.id" link="ctrl.subject.id"></non-editable>
