Remove preferred from namespace and prefix, show namespace/prefix under model
Closes #182

--- a/src/components/model/addRequireModal.html
+++ b/src/components/model/addRequireModal.html
@@ -10,13 +10,13 @@
         </div>
       </editable>
 
-      <editable title="Preferred namespace">
+      <editable title="Namespace">
         <div class="input-group input-group-md">
           <input id="namespace" class="form-control" required namespace-input ng-model="ctrl.namespace" />
         </div>
       </editable>
 
-      <editable title="Preferred prefix">
+      <editable title="Prefix">
         <div class="input-group input-group-md">
           <input id="prefix" type="text" class="form-control" required ng-model="ctrl.prefix" />
         </div>
