--- a/src/components/model/modelView.html
+++ b/src/components/model/modelView.html
@@ -16,7 +16,8 @@
           <input id="modelLabel" class="form-control" type="text" localized-input="required" ng-model="ctrl.editableInEdit.label" />
         </editable>
 
-        <non-editable title="Id" value="ctrl.editableInEdit.id"></non-editable>
+        <non-editable title="Namespace" value="ctrl.editableInEdit.namespace"></non-editable>
+        <non-editable title="Prefix" value="ctrl.editableInEdit.prefix"></non-editable>
 
         <editable title="Comment">
           <textarea id="modelComment" class="form-control" localized-input ng-model="ctrl.editableInEdit.comment"></textarea>
