--- a/src/components/editor/selectionView.html
+++ b/src/components/editor/selectionView.html
@@ -22,7 +22,7 @@
 <div ng-if="!ctrl.hideVisualization" ng-class="{'col-md-5': !ctrl.visCollapsed && !ctrl.contentCollapsed, 'col-md-1': ctrl.visCollapsed, 'col-md-11': !ctrl.visCollapsed && ctrl.contentCollapsed}">
   <div class="component" float top-offset="8">
     <div class="component-header">
-      <h3 ng-click="ctrl.collapseVisualization()" ng-hide="ctrl.visCollapsed"><span class="glyphicon glyphicon-th"> <span translate>Visualization</span></span></h3>
+      <h3 ng-click="ctrl.collapseVisualization()" ng-hide="ctrl.visCollapsed"><span class="glyphicon glyphicon-th"></span> <span translate>Visualization</span></h3>
       <h3 ng-click="ctrl.collapseVisualization()" ng-hide="!ctrl.visCollapsed"><span class="glyphicon glyphicon-th"></span></h3>
     </div>
     <div class="visualization-container" ng-hide="ctrl.visCollapsed">
