--- a/src/components/model/model.html
+++ b/src/components/model/model.html
@@ -1,6 +1,6 @@
 <div ng-hide="ctrl.loading">
 
-  <model-view model="ctrl.model"></model-view>
+  <model-view ng-if="ctrl.model" model="ctrl.model"></model-view>
 
   <div class="bottom" ng-if="!ctrl.model.unsaved">
     <div class="model-panel--left" float="model-panel--left-placeholder">
