--- a/src/components/model/modelView.html
+++ b/src/components/model/modelView.html
@@ -4,7 +4,7 @@
   </div>
 
   <form name="form" class="editable-form">
-    <div ng-if="ctrl.model" uib-collapse="!ctrl.visible" class="main-editable-content">
+    <div uib-collapse="!ctrl.visible" class="main-editable-content">
 
       <editable-entity-buttons editable-controller="ctrl">
         <button type="button" class="btn btn-default right" ng-click="ctrl.addRequire()" ng-show="ctrl.canModify()" translate>Add require</button>
@@ -24,7 +24,7 @@
         </editable>
 
         <editable title="State" value-as-localization-key="true" ng-if="!ctrl.model.unsaved">
-          <state-select id="modelState" state="ctrl.editableInEdit.state" model="ctrl.model" ng-if="ctrl.model"></state-select>
+          <state-select id="modelState" state="ctrl.editableInEdit.state" model="ctrl.model"></state-select>
         </editable>
       </div>
 
